// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonFilter Component renders correctly when disabled 1`] = `
<DocumentFragment>
  <button
    class="
    inline-flex items-center gap-2 rounded-[10px] cursor-pointer 
    bg-secondary200-mode1 text-black-mode1 py-1 px-2.5 text-xs
    opacity-50 pointer-events-none
    transition-colors duration-150
  "
    type="button"
  >
    Disabled Button
  </button>
</DocumentFragment>
`;

exports[`ButtonFilter Component renders correctly with a start icon 1`] = `
<DocumentFragment>
  <button
    class="
    inline-flex items-center gap-2 rounded-[10px] cursor-pointer 
    bg-secondary200-mode1 text-black-mode1 py-1 px-2.5 text-xs
    hover:opacity-90
    transition-colors duration-150
  "
    type="button"
  >
    <svg
      data-testid="mock-icon"
      fill="#08090C"
      height="24"
      width="24"
    />
    Button with Icon
  </button>
</DocumentFragment>
`;

exports[`ButtonFilter Component renders correctly with primary variant 1`] = `
<DocumentFragment>
  <button
    class="
    inline-flex items-center gap-2 rounded-[10px] cursor-pointer 
    bg-secondary200-mode1 text-black-mode1 py-1 px-2.5 text-xs
    hover:opacity-90
    transition-colors duration-150
  "
    type="button"
  >
    Primary Button
  </button>
</DocumentFragment>
`;

exports[`ButtonFilter Component renders correctly with secondary variant 1`] = `
<DocumentFragment>
  <button
    class="
    inline-flex items-center gap-2 rounded-[10px] cursor-pointer 
    bg-grey500-mode1 text-white-mode1 rounded-lg px-3 py-1.5 text-base
    hover:opacity-90
    transition-colors duration-150
  "
    type="button"
  >
    Secondary Button
  </button>
</DocumentFragment>
`;
